# Kahoot-Ranking

./: .gitignore  Kahoot_Ranking.ipynb  README.md  kahoot_ranking.py  pyproject.toml  utils.py
2023-3_LEVITICO/: LEVÍTICO[10]Expiação.xlsx  LEVÍTICO[11]Juízo.xlsx  LEVÍTICO[14]Lei.xlsx  LEVÍTICO[5]Perdão.xlsx  LEVÍTICO[8]Adoração.xlsx  LEVÍTICO[9]Saúde.xlsx
2023-4_IDENTIDADE/: IDENTIDADE [06] Organizados para o serviço.xlsx  IDENTIDADE [08] A MENSAGEM DE SAÚDE.xlsx  IDENTIDADE [09] Evangelho no Adventismo.xlsx  IDENTIDADE [12] A Mensagem Final.xlsx
2023_3-LEVITICO/: LEVÍTICO [1] - Jesus.xlsx  LEVÍTICO[12]Pureza.xlsx  LEVÍTICO[13]Santidade.xlsx  LEVÍTICO[3]Cuidado.xlsx  LEVÍTICO[4]Comunhão.xlsx  LEVÍTICO[7]Ministério.xlsx
2023_4-IDENTIDADE/: IDENTIDADE [03] O Santo Sábado.xlsx  IDENTIDADE [04] O Dom Profético.xlsx  IDENTIDADE [05] O Grande Conflito.xlsx  IDENTIDADE [07] O Sistema de Dízimos.xlsx  IDENTIDADE [10] A DIVINDADE TRIÚNA .xlsx  IDENTIDADE [13] Vá contar ao mundo.xlsx
2024-1_LIBERDADE/: LIBERDADE [01] O espírito de Cristo .xlsx  LIBERDADE [04] Verdadeira Liberdade.xlsx  LIBERDADE [05] Separação Igreja Estado.xlsx  LIBERDADE [07] Entendendo a Teocracia .xlsx  LIBERDADE [09] A igreja perseguida .xlsx  LIBERDADE [10] Contra a Escravidão.xlsx  LIBERDADE [11] A última tirania.xlsx
2024-2_CONFLITO/: CONFLITO [02] -  A gênese de satanás .xlsx  CONFLITO [05] A Deserção da Humanidade.xlsx  CONFLITO [11] O Veredito Cósmico.xlsx
2024-3_PARABOLAS/: PARÁBOLAS [02] Perdido e Encontrado.xlsx  PARÁBOLAS [03] Descobrindo o tesouro .xlsx  (+10 more)
(+46 files in other folders)
