[tool.poetry]
name = "kahoot"
version = "0.1.0"
description = ""
authors = ["taniomi <131834608+taniomi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
unidecode = "^1.3.8"
openpyxl = "^3.1.5"
fuzzywuzzy = "^0.18.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
